2008-03-02  Wakaba  <wakaba@suika.fam.cx>

	* Atom.pm: Reimplemented.

2008-03-02  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: |in_a_href| flag is not reset after the </a>.
	Raise an error if |area| is not a descendant of |map|.

2008-03-01  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Sectioning root category added.  |blockquote|
	is no longer a sectioning content.

2008-02-26  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Allow |blockquote| in |header| and |footer| (HTML5
	revision 1250).

2008-02-26  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: First version of Web Forms 2.0 support (its weired,
	since the spec itself is frankensteinesque:-); note that though
	it is weired spec from the today's viewpoint, it is still
	better-written spec than any W3C (Candidate or Proposed or full)
	Recommendation, sadly.

2008-02-26  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Since even XHTML Basic 1.1 is a CR, diffs
	from XHTML M12N 1.0 are reflected in |status| field.

2008-02-26  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: HTML5 status constants are OR-ed with "allowed" status.
	Don't raise "not defined" errors; they are now raised according
	to status flags.  Status flags of li/@value, ol/@start, and menu
	are now non-deprecated, to avoid deprecated error message.
	area/@hreftype typo fixed.  |isindex| SHOULD NOT be used
	according to HTML4.

2008-02-26  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Make |figure| caption optional (HTML5 revision 1240).
	Add |reversed| to |ol| (HTML5 revision 1248).

2008-02-24  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Most of Web Forms 1.0 attributes are implemented.

2008-02-24  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: |big|, |tt|, |s|, |strike|, and |u| are implemented.
	Raise not-part-of-HTML5 error for |acronym|.

2008-02-24  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: HTML5 attribute status added.

2008-02-24  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Standardized status for attributes are added (HTML5