@@ -1,7 +1,7 @@
 1..1502
 # Running under perl version 5.008007 for linux
-# Current time local: Sun Mar  2 20:07:51 2008
-# Current time GMT:   Sun Mar  2 11:07:51 2008
+# Current time local: Sun Mar  2 21:56:21 2008
+# Current time GMT:   Sun Mar  2 12:56:21 2008
 # Using Test.pm version 1.25
 # t/content-model-1.dat
 ok 1
