@@ -1,5 +1,10 @@
 2008-03-02  Wakaba  <wakaba@suika.fam.cx>
 
+	* HTML.pm: Status information from old specifications
+	are incorporated.
+
+2008-03-02  Wakaba  <wakaba@suika.fam.cx>
+
 	* Atom.pm: Reimplemented.
 
 2008-03-02  Wakaba  <wakaba@suika.fam.cx>
